--- a/app/src/main/res/layout/trackable_route_info.xml
+++ b/app/src/main/res/layout/trackable_route_info.xml
@@ -9,7 +9,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".controller.DisplayTrackableRouteInfoActivity">
+    tools:context=".view.DisplayTrackableRouteInfoActivity">
 
     <TextView
         android:id="@+id/trackableName"
