--- a/app/src/main/res/layout/trackables_list.xml
+++ b/app/src/main/res/layout/trackables_list.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".controller.DisplayTrackablesListActivity">
+    tools:context=".view.DisplayTrackablesListActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
