--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -15,5 +15,6 @@
     <dimen name="tracking_text_size">18dp</dimen>
     <dimen name="tracking_item_text_size">15dp</dimen>
     <dimen name="table_padding">3dip</dimen>
+    <dimen name="fab_margin">16dp</dimen>
 
 </resources>
