--- a/app/src/main/res/layout/tracking_item.xml
+++ b/app/src/main/res/layout/tracking_item.xml
@@ -89,7 +89,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="@dimen/table_padding"
-                android:text="@string/meet_location"
+                android:text="@string/current_location"
                 android:textColor="@color/black"
                 android:textSize="@dimen/tracking_item_text_size"/>
 
