--- a/app/src/main/res/layout/tracking_item.xml
+++ b/app/src/main/res/layout/tracking_item.xml
@@ -4,6 +4,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:paddingBottom="@dimen/trackable_padding_bottom"
     android:orientation="vertical">
 
     <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
