--- a/app/src/main/res/layout/trackings_list.xml
+++ b/app/src/main/res/layout/trackings_list.xml
@@ -37,7 +37,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_toRightOf="@+id/trackingListName"
                 android:text="@string/add_tracking"
-                android:textSize="@dimen/label_text_size"/>
+                android:textSize="@dimen/button_text_size"/>
         </LinearLayout>
 
         <android.support.v7.widget.RecyclerView
