--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -5,7 +5,7 @@
     <item
         android:id="@+id/action_settings"
         android:title="@string/settings"
-        app:showAsAction="ifRoom"
+        app:showAsAction="always"
         />
 
 </menu>
